--- a/edittest.html
+++ b/edittest.html
@@ -13,7 +13,84 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 
+<style>
+    body {
+        background-color: #f0f0f0;
+        font-family: Arial, sans-serif;
+    }
+
+    .navbar-brand {
+        font-size: 1.8rem;
+        font-weight: bold;
+        color: #333;
+    }
+
+    .navbar {
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        padding: 10px 0;
+    }
+
+    .logout-btn,
+    .add-test-btn {
+        transition: background-color 0.3s ease;
+    }
+
+    .logout-btn:hover,
+    .add-test-btn:hover {
+        filter: brightness(90%);
+    }
+
+    .container {
+        margin-top: 30px;
+    }
+
+    .table {
+        background-color: #fff;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+    }
+
+    .table th,
+    .table td {
+        border: none;
+        vertical-align: middle;
+        color: #333;
+    }
+
+    .table-light th {
+        background-color: #f8f9fa;
+        color: #555;
+        font-weight: 600;
+    }
+
+    .table-hover tbody tr:hover {
+        background-color: rgba(0, 0, 0, 0.05);
+    }
+
+    .add-test-btn {
+        background-color: #3498db;
+        border-color: #3498db;
+    }
+
+    .add-test-btn:hover {
+        background-color: #2980b9;
+        border-color: #2980b9;
+    }
+
+    .logout-btn {
+        background-color: #e74c3c;
+        border-color: #e74c3c;
+    }
+
+    .logout-btn:hover {
+        background-color: #c0392b;
+        border-color: #c0392b;
+    }
+</style>
+
+
 <body>
+    
     <div class="container mt-5">
         <h1 class="text-center">Edit Test</h1>
         <p class="text-center">Logged in as: <span id="userEmail"></span></p>
