--- a/index.html
+++ b/index.html
@@ -3,52 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teacher Registration and Login</title>
+    <title>Teacher Login</title>
     <!-- Firebase App (the core Firebase SDK) -->
     <script src="https://www.gstatic.com/firebasejs/9.8.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.8.1/firebase-auth-compat.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <!-- Custom CSS -->
+    <style>
+        body {
+            background: linear-gradient(45deg, #6ab1d7, #33d9b2);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background: white;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            width: 100%;
+        }
+        h1 {
+            color: #33d9b2;
+        }
+        .btn-primary {
+            background-color: #33d9b2;
+            border: none;
+        }
+        .btn-primary:hover {
+            background-color: #28b998;
+        }
+    </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <h1 class="text-center">Teacher Registration and Login</h1>
-        <ul class="nav nav-tabs" id="authTabs" role="tablist">
-            <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="register-tab" data-bs-toggle="tab" data-bs-target="#register" type="button" role="tab" aria-controls="register" aria-selected="true">Register</button>
-            </li>
-            <li class="nav-item" role="presentation">
-                <button class="nav-link" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab" aria-controls="login" aria-selected="false">Login</button>
-            </li>
-        </ul>
-        <div class="tab-content" id="authTabsContent">
-            <div class="tab-pane fade show active" id="register" role="tabpanel" aria-labelledby="register-tab">
-                <form id="registrationForm" class="mt-3">
-                    <div class="mb-3">
-                        <label for="reg-email" class="form-label">Email:</label>
-                        <input type="email" class="form-control" id="reg-email" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="reg-password" class="form-label">Password:</label>
-                        <input type="password" class="form-control" id="reg-password" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Register</button>
-                </form>
+    <div class="container">
+        <h1 class="text-center">Teacher Login</h1>
+        <form id="loginForm" class="mt-4">
+            <div class="mb-3">
+                <label for="login-email" class="form-label">Email:</label>
+                <input type="email" class="form-control" id="login-email" placeholder="Enter your email" required>
             </div>
-            <div class="tab-pane fade" id="login" role="tabpanel" aria-labelledby="login-tab">
-                <form id="loginForm" class="mt-3">
-                    <div class="mb-3">
-                        <label for="login-email" class="form-label">Email:</label>
-                        <input type="email" class="form-control" id="login-email" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="login-password" class="form-label">Password:</label>
-                        <input type="password" class="form-control" id="login-password" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
+            <div class="mb-3">
+                <label for="login-password" class="form-label">Password:</label>
+                <input type="password" class="form-control" id="login-password" placeholder="Enter your password" required>
             </div>
-        </div>
+            <button type="submit" class="btn btn-primary w-100">Login</button>
+        </form>
     </div>
 
     <!-- Firebase configuration and initialization -->
@@ -66,26 +70,6 @@
 
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
-
-        // Register function
-        document.getElementById('registrationForm').onsubmit = function(event) {
-            event.preventDefault();
-            const email = document.getElementById('reg-email').value;
-            const password = document.getElementById('reg-password').value;
-
-            firebase.auth().createUserWithEmailAndPassword(email, password)
-                .then((userCredential) => {
-                    const user = userCredential.user;
-                    console.log('Teacher registered:', user);
-                    alert('Teacher registered successfully!');
-                })
-                .catch((error) => {
-                    const errorCode = error.code;
-                    const errorMessage = error.message;
-                    console.error('Error:', errorCode, errorMessage);
-                    alert('Error: ' + errorMessage);
-                });
-        };
 
         // Login function
         document.getElementById('loginForm').onsubmit = function(event) {
